# ems_terrain

./: Cargo.toml  output.ifc  test.ifc  wcs.tif
examples/: generate_ifc.rs
output/: yo.ifc
src/: lib.rs  main.rs  mesh.rs
src/core/: bbox.rs  mesh.rs  mod.rs  vertex.rs
src/export/: ifc.rs  mod.rs
src/processing/: mod.rs  surface.rs
src/providers/: geonorge.rs  mod.rs
