[package]
name = "ems_terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.24.0"
delaunator = "1.0.2"
delaunay = "0.6.0"
futures = "0.3.30"
geo-types = "0.7.18"
geotiff = "0.1.0"
indicatif = "0.17.8"
itertools = "0.13.0"
mem = "0.5.0"
meshopt = "0.6.2"
nalgebra = "0.34.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
spade = "2.15.0"
threecrate = "0.5.0"
tokio = { version = "1.40.0", features = ["full"] }
